# hermes-web-ui

./: .editorconfig  .gitignore  README.md
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  build.rs
backend/src/: config.rs  error.rs  main.rs  websocket.rs
backend/src/auth/: mod.rs
backend/src/clients/: control_plane.rs  iam.rs  memory.rs  mod.rs
backend/src/handlers/: auth.rs  executions.rs  memory.rs  mod.rs  workspaces.rs
backend/src/middleware/: auth.rs
frontend/: .dockerignore  .env.example  .eslintrc.json  .lintstagedrc.js  .prettierignore  .prettierrc  Dockerfile  drizzle.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: example-mode-toggle.tsx  theme-provider.tsx
frontend/src/components/ui/: dropdown-menu.tsx
frontend/src/server/api/: root.ts  trpc.ts
frontend/src/server/api/routers/: auth.ts  execution.ts  memory.ts  workspace.ts
frontend/src/server/db/: schema.ts
frontend/src/server/lib/: auth.ts  hermes-client.ts
frontend/src/styles/: globals.css
